[project]
name = "paramit"
version = "0.2.4"
description = "Parameterize Python scripts/notebooks all from the command line."
authors = [
    { name = "Towaki Takikawa", email = "tovacinni@gmail.com" },
    { name = "Allen Wang", email = "allen.houze.wang@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.4",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "gitpython>=3.1.43",
    "platformdirs>=4.2.2",
    "subprocess-tee>=0.4.2",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "ipython>=8.18.0",
    "libcst>=1.4.0",
    "jupytext>=1.16.3",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
haipera = "paramit.cli:main"
paramit = "paramit.cli:main"

[project.optional-dependencies]
notebook = [
    "notebook>=7.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paramit"]
